# QuIS

./: CHANGELOG.md  README.md  package.json  pyproject.toml
.github/workflows/: release.yaml
quis/: __init__.py  main.py  quis.json  quis.py
