[tool.poetry]
name = "quis"
version = "0.0.1"
authors = ["Quantum Inspire support@quantum-inspire.com"]
description = "A Quantum Instruction Set"
license = "Apache-2.0"
readme = "README.md"

keywords = [
    "quantum",
    "instructions",
    "computation",
]
classifiers = [
  'Development Status :: 3 - Alpha',
  'Programming Language :: Python :: 3',
  'Programming Language :: Python :: 3.9',
  'Programming Language :: Python :: 3.10',
  'Programming Language :: Python :: 3.11',
  'Programming Language :: Python :: 3.12',
  'License :: OSI Approved :: Apache Software License'
]
packages = [
    { include = "quis" },
]

[tool.poetry.dependencies]
python = "^3.9"

[tool.poetry.group.dev.dependencies]
black = ">=23.11,<25.0"
isort = "^5.11.4"
pytest = {extras = ["toml"], version = ">=7.4.3,<9.0.0"}
pytest-cov = "^4.1.0"
mypy = "^1.7.0"

[tool.isort]
profile = "black"
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
line_length = 120

[tool.black]
line-length = 120

[tool.mypy]
ignore_missing_imports = true

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
